--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="itsa.ico" />
 
-    <link rel="stylesheet" href="css/red.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
