added opengraph tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       content="IT Student Association is the go-to club for tech enthusiasts at UC."
     />
 
+    <meta property="og:title" content="IT Student Association at UC" />
+    <meta property="og:description" content="IT Student Association is the go-to club for tech enthusiasts at UC." />
+    <meta property="og:image" content="preview.png" />
+    <meta property="og:type" content="website" />
+
     <link rel="icon" href="itsa.ico" />
 
     <link rel="stylesheet" href="css/styles.css" />
