my dumbass didnt put the hrefs to teams and clink

--- a/index.html
+++ b/index.html
@@ -48,21 +48,25 @@
             <p class="py-3 text-white text-large">
               Join the go-to club for tech enthusiasts at UC!
             </p>
-            <button
+            <a
               class="btn btn-teams d-inline-flex flex-row align-items-center"
+              href="https://teams.microsoft.com/l/team/19%3aIQjnmJDG2NdWk8E9N4u8a-UGZqPeBWMnjJ7JanPJ5Ls1%40thread.tacv2/conversations?groupId=c154617b-3fc7-42fb-8988-087bfcf62ef1&tenantId=f5222e6c-5fc6-48eb-8f03-73db18203b63"
+              target="_new"
             >
               <img src="img/teams.png" height="40" />
-            </button>
-            <button
+            </a>
+            <a
               class="
                 btn btn-campuslink
                 d-inline-flex
                 flex-row
                 align-items-center
               "
+              href="https://campuslink.uc.edu/organization/information-technology-student-association"
+              target="_new"
             >
               <img src="img/campuslink.png" height="40" />
-            </button>
+            </a>
           </div>
         </div>
       </div>
