--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     />
 
     <meta property="og:title" content="IT Student Association at UC" />
-    <meta property="og:description" content="IT Student Association is the go-to club for tech enthusiasts at UC." />
+    <meta
+      property="og:description"
+      content="IT Student Association is the go-to club for tech enthusiasts at UC."
+    />
     <meta property="og:image" content="preview.png" />
     <meta property="og:type" content="website" />
 
@@ -24,24 +27,24 @@
   </head>
   <body>
     <section class="smart-scroll">
-      <div class="container-fluid">
+      <div class="container-fluid navbar-container">
         <nav
-          class="navbar navbar-expand-md navbar-dark justify-content-between"
+          class="navbar navbar-expand-md navbar-dark justify-content-between px-0"
         >
           <a class="navbar-brand heading-black" href="index.html">
-            <img src="img/itsa.png" width="150" height="150" />
+            <img src="img/itsa.png" class="logo" />
           </a>
-          <a class="navbar-brand heading-black" href="index.html">
-            <img src="img/uc.png" height="150" />
+          <a class="navbar-brand heading-black mr-0" href="index.html">
+            <img src="img/uc.png" class="logo" />
           </a>
         </nav>
       </div>
     </section>
 
-    <section class="py-md-0 bg-hero" id="home">
-      <div class="container">
+    <section class="py-md-10 bg-hero" id="home">
+      <div class="container-fluid">
         <div class="row vh-md-100">
-          <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
+          <div class="col-md-8 col-sm-10 col-12 mx-auto mt-6 my-lg-auto text-center">
             <h1 class="heading-black text-capitalize text-red">
               Information Technology Student Assocation
             </h1>
@@ -49,7 +52,7 @@
               Join the go-to club for tech enthusiasts at UC!
             </p>
             <a
-              class="btn btn-teams d-inline-flex flex-row align-items-center"
+              class="btn btn-teams d-inline-flex flex-row align-items-center mb-3"
               href="https://teams.microsoft.com/l/team/19%3aIQjnmJDG2NdWk8E9N4u8a-UGZqPeBWMnjJ7JanPJ5Ls1%40thread.tacv2/conversations?groupId=c154617b-3fc7-42fb-8988-087bfcf62ef1&tenantId=f5222e6c-5fc6-48eb-8f03-73db18203b63"
               target="_new"
             >
@@ -61,6 +64,7 @@
                 d-inline-flex
                 flex-row
                 align-items-center
+                mb-3
               "
               href="https://campuslink.uc.edu/organization/information-technology-student-association"
               target="_new"
@@ -75,11 +79,11 @@
     <section id="features">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 mx-auto text-center">
+          <div class="col-md-6 mx-auto mt-6 mt-md-0 text-center">
             <h2 class="heading-black text-red">Why Join ITSA?</h2>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-lg-5">
           <div class="col-md-10 mx-auto">
             <div class="row feature-boxes">
               <div class="col-md-6 box">
@@ -152,11 +156,11 @@
             <a class="btn btn-primary" href="mailto:itstudentsuc@gmail.com"
               >itstudentsuc@gmail.com</a
             >
-            <br><br>
+            <br /><br />
             <button
-              class="btn btn-teams d-inline-flex flex-row align-items-center"
+              class="btn btn-teams d-inline-flex flex-row align-items-center mb-2"
             >
-              <img src="img/teams.png" height="40" />
+              <img src="img/teams.png" height="30" />
             </button>
             <button
               class="
@@ -164,9 +168,10 @@
                 d-inline-flex
                 flex-row
                 align-items-center
+                mb-2
               "
             >
-              <img src="img/campuslink.png" height="40" />
+              <img src="img/campuslink.png" height="30" />
             </button>
           </div>
         </div>
@@ -184,7 +189,10 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://kit.fontawesome.com/2a5cce350d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2a5cce350d.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
