better responsiveness between the two top sections

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="py-md-10 bg-hero" id="home">
       <div class="container-fluid">
-        <div class="row vh-md-100">
+        <div class="row pt-3 pt-md-5 pt-lg-8">
           <div class="col-md-8 col-sm-10 col-12 mx-auto mt-6 my-lg-auto text-center">
             <h1 class="heading-black text-capitalize text-red">
               Information Technology Student Assocation
@@ -79,7 +79,7 @@
     <section id="features">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 mx-auto mt-6 mt-md-0 text-center">
+          <div class="col-md-6 mx-auto mt-7 text-center">
             <h2 class="heading-black text-red">Why Join ITSA?</h2>
           </div>
         </div>
