--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
+    <div class="background"></div>
     <section class="smart-scroll">
       <div class="container-fluid navbar-container">
         <nav
