--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta property="og:image" content="preview.png" />
     <meta property="og:type" content="website" />
 
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
+
     <link rel="icon" href="itsa.ico" />
 
     <link rel="stylesheet" href="css/styles.css" />
