--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       property="og:description"
       content="IT Student Association is the go-to club for tech enthusiasts at UC."
     />
-    <meta property="og:image" content="preview.png" />
+    <meta property="og:image" content="preview.webp" />
     <meta property="og:type" content="website" />
 
     <link rel="icon" href="itsa.ico" />
@@ -33,10 +33,10 @@
           class="navbar navbar-expand-md navbar-dark justify-content-between px-0"
         >
           <a class="navbar-brand heading-black" href="index.html">
-            <img src="img/itsa.png" class="logo" />
+            <img src="img/itsa.webp" class="logo" />
           </a>
           <a class="navbar-brand heading-black mr-0" href="index.html">
-            <img src="img/uc.png" class="logo" />
+            <img src="img/uc.webp" class="logo" />
           </a>
         </nav>
       </div>
@@ -57,7 +57,7 @@
               href="https://teams.microsoft.com/l/team/19%3aIQjnmJDG2NdWk8E9N4u8a-UGZqPeBWMnjJ7JanPJ5Ls1%40thread.tacv2/conversations?groupId=c154617b-3fc7-42fb-8988-087bfcf62ef1&tenantId=f5222e6c-5fc6-48eb-8f03-73db18203b63"
               target="_new"
             >
-              <img src="img/teams.png" height="40" />
+              <img src="img/teams.webp" height="40" />
             </a>
             <a
               class="
@@ -70,7 +70,7 @@
               href="https://campuslink.uc.edu/organization/information-technology-student-association"
               target="_new"
             >
-              <img src="img/campuslink.png" height="40" />
+              <img src="img/campuslink.webp" height="40" />
             </a>
           </div>
         </div>
@@ -161,7 +161,7 @@
             <button
               class="btn btn-teams d-inline-flex flex-row align-items-center mb-2"
             >
-              <img src="img/teams.png" height="30" />
+              <img src="img/teams.webp" height="30" />
             </button>
             <button
               class="
@@ -172,7 +172,7 @@
                 mb-2
               "
             >
-              <img src="img/campuslink.png" height="30" />
+              <img src="img/campuslink.webp" height="30" />
             </button>
           </div>
         </div>
