swap and preload fonts

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/custom.css" />
+
+    <link rel="preload" as="font" href="fonts/Lovelo/Lovelo-Black.eot">
+    <link rel="preload" as="font" href="fonts/Lovelo/Lovelo-LineBold.eot">
   </head>
   <body>
     <div class="background"></div>
