--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           class="navbar navbar-expand-md navbar-dark justify-content-between px-0"
         >
           <a class="navbar-brand heading-black" href="index.html">
-            <img src="img/itsa.webp" class="logo" />
+            <img src="img/itsa.webp" class="logo" alt="ITSA Logo" />
           </a>
           <a class="navbar-brand heading-black mr-0" href="index.html">
-            <img src="img/uc.webp" class="logo" />
+            <img src="img/uc.webp" class="logo" alt="UC Logo" />
           </a>
         </nav>
       </div>
@@ -60,7 +60,7 @@
               href="https://teams.microsoft.com/l/team/19%3aIQjnmJDG2NdWk8E9N4u8a-UGZqPeBWMnjJ7JanPJ5Ls1%40thread.tacv2/conversations?groupId=c154617b-3fc7-42fb-8988-087bfcf62ef1&tenantId=f5222e6c-5fc6-48eb-8f03-73db18203b63"
               target="_new"
             >
-              <img src="img/teams.webp" height="40" />
+              <img src="img/teams.webp" height="40" alt="Teams Logo" />
             </a>
             <a
               class="
@@ -73,7 +73,7 @@
               href="https://campuslink.uc.edu/organization/information-technology-student-association"
               target="_new"
             >
-              <img src="img/campuslink.webp" height="40" />
+              <img src="img/campuslink.webp" height="40" alt="CampusLink Logo" />
             </a>
           </div>
         </div>
@@ -164,7 +164,7 @@
             <button
               class="btn btn-teams d-inline-flex flex-row align-items-center mb-2"
             >
-              <img src="img/teams.webp" height="30" />
+              <img src="img/teams.webp" height="30" alt="Teams Logo" />
             </button>
             <button
               class="
@@ -175,7 +175,7 @@
                 mb-2
               "
             >
-              <img src="img/campuslink.webp" height="30" />
+              <img src="img/campuslink.webp" height="30" alt="CampusLink Logo" />
             </button>
           </div>
         </div>
