aded labels to links and btns

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <nav
           class="navbar navbar-expand-md navbar-dark justify-content-between px-0"
         >
-          <a class="navbar-brand heading-black" href="index.html">
+          <a class="navbar-brand heading-black" href="index.html" aria-label="ITSA">
             <img src="img/itsa.webp" class="logo" alt="ITSA Logo" />
           </a>
-          <a class="navbar-brand heading-black mr-0" href="index.html">
+          <a class="navbar-brand heading-black mr-0" href="index.html" aria-label="UC">
             <img src="img/uc.webp" class="logo" alt="UC Logo" />
           </a>
         </nav>
@@ -59,6 +59,7 @@
               class="btn btn-teams d-inline-flex flex-row align-items-center mb-3"
               href="https://teams.microsoft.com/l/team/19%3aIQjnmJDG2NdWk8E9N4u8a-UGZqPeBWMnjJ7JanPJ5Ls1%40thread.tacv2/conversations?groupId=c154617b-3fc7-42fb-8988-087bfcf62ef1&tenantId=f5222e6c-5fc6-48eb-8f03-73db18203b63"
               target="_new"
+              aria-label="Join ITSA on Teams"
             >
               <img src="img/teams.webp" height="40" alt="Teams Logo" />
             </a>
@@ -72,6 +73,7 @@
               "
               href="https://campuslink.uc.edu/organization/information-technology-student-association"
               target="_new"
+              aria-label="Join ITSA on CampusLink"
             >
               <img src="img/campuslink.webp" height="40" alt="CampusLink Logo" />
             </a>
@@ -163,6 +165,7 @@
             <br /><br />
             <button
               class="btn btn-teams d-inline-flex flex-row align-items-center mb-2"
+              aria-label="Join ITSA on Teams"
             >
               <img src="img/teams.webp" height="30" alt="Teams Logo" />
             </button>
@@ -174,6 +177,7 @@
                 align-items-center
                 mb-2
               "
+              aria-label="Join ITSA on CampusLink"
             >
               <img src="img/campuslink.webp" height="30" alt="CampusLink Logo" />
             </button>
