fixed the hrefs in the redirect page

--- a/c/index.html
+++ b/c/index.html
@@ -17,15 +17,15 @@
       property="og:description"
       content="IT Student Association is the go-to club for tech enthusiasts at UC."
     />
-    <meta property="og:image" content="preview.webp" />
+    <meta property="og:image" content="../preview.webp" />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" href="itsa.ico" />
+    <link rel="icon" href="../itsa.ico" />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
 
-    <link rel="preload" as="font" href="fonts/Lovelo/Lovelo-Black.eot">
+    <link rel="preload" as="font" href="../fonts/Lovelo/Lovelo-Black.eot">
     <meta http-equiv="refresh" content="1; URL=https://forms.office.com/Pages/ResponsePage.aspx?id=bC4i9cZf60iPA3PbGCA7YwyyRmpx74BNtjCcP129qhlUMktWNTVDUlNMS0pYRDg0WUVDV0I5VVoyNC4u" />
   </head>
   <body>
