new redirect pages!!

--- a/cl/index.html
+++ b/cl/index.html
@@ -1,8 +1,46 @@
-<html>
-<head>
-<meta http-equiv="refresh" content="1; URL=https://campuslink.uc.edu/organization/information-technology-student-association" />
-</head>
-<body>
-Redirecting to ITSA CampusLink...
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>IT Student Association at UC</title>
+    <meta
+      name="description"
+      content="IT Student Association is the go-to club for tech enthusiasts at UC."
+    />
+
+    <meta property="og:title" content="IT Student Association at UC" />
+    <meta
+      property="og:description"
+      content="IT Student Association is the go-to club for tech enthusiasts at UC."
+    />
+    <meta property="og:image" content="../preview.webp" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" href="../itsa.ico" />
+
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
+
+    <link rel="preload" as="font" href="../fonts/Lovelo/Lovelo-Black.eot">
+    <meta http-equiv="refresh" content="1; URL=https://campuslink.uc.edu/organization/information-technology-student-association" />
+  </head>
+  <body>
+    <div class="background"></div>
+
+    <section class="py-md-10 bg-hero" id="home">
+      <div class="container-fluid">
+        <div class="row pt-3 pt-md-5 pt-lg-8">
+          <div class="col-md-8 col-sm-10 col-12 mx-auto mt-6 my-lg-auto text-center">
+            <p class="py-3 text-white text-large">
+              Redirecting to ITSA CampusLink
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
